@@ -320,8 +320,10 @@ https://github.com/networkupstools/nut/milestone/11
      and `-l <logfile>`) along with newer tuple(s) for multiple-system logging
      (repeatable `-m <system,logfile>`), previously the single-system options
      were overridden by the tuple(s); now they become part of the list.
-   * A `%t` for a TAB character can now be used in the formatting string.
+   * Same log file may safely be used in different logging tuples (it is
+     then recommended to use `%UPSHOST%` in a custom formatting string).
    * Fixed printing of `%UPSHOST%` when multiple systems are being logged.
+   * A `%t` for a TAB character can now be used in the formatting string.
    * Added systemd and SMF service integration. [#1803]
 
  - More systemd integration:
